# DidILeak

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
dashboard/: README.md  next.config.mjs  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/scan/: route.ts
dashboard/components/: finding-detail.tsx  findings-table.tsx  stats.tsx  upload.tsx
didileak/: __init__.py  __main__.py  cli.py  models.py  rotation.py
didileak/detectors/: __init__.py
didileak/parsers/: __init__.py  base.py  chatgpt.py  claude.py  cursor.py  generic.py
didileak/reporters/: __init__.py  html.py  json_report.py  markdown.py
docs/demo/: index.html  report.html
examples/: chatgpt_export_sample.json
tests/: conftest.py  test_cli.py  test_coverage_gaps.py  test_detectors.py  test_edge_cases.py  test_parsers.py  test_reporters.py
