[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DidILeak"
version = "0.1.0"
description = "Scan your LLM chat history for leaked secrets, credentials, and PII"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Frangel Barrera" }]
keywords = ["security", "secrets", "llm", "chatgpt", "claude", "pii", "gitleaks", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
didileak = "didileak.cli:main"

[project.urls]
Homepage = "https://github.com/frangelbarrera/DidILeak"
Repository = "https://github.com/frangelbarrera/DidILeak"

[tool.setuptools.packages.find]
include = ["didileak*"]

[tool.setuptools.package-data]
didileak = ["data/*.json", "templates/*.html", "templates/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=didileak --cov-report=term-missing --cov-fail-under=80"
