[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DidILeak"
version = "0.1.0"
description = "Scan your LLM chat history for leaked secrets, credentials, and PII"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Frangel Barrera" }]
keywords = [
    "security", "secrets", "llm", "chatgpt", "claude", "cursor",
    "pii", "gitleaks", "trufflehog", "audit", "credential-scanning",
    "devsecops", "privacy", "leak-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
    "Topic :: System :: Installation :: Setup",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
didileak = "didileak.cli:main"

[project.urls]
Homepage = "https://github.com/frangelbarrera/DidILeak"
Repository = "https://github.com/frangelbarrera/DidILeak"
Documentation = "https://github.com/frangelbarrera/DidILeak#readme"
"Bug Tracker" = "https://github.com/frangelbarrera/DidILeak/issues"
Changelog = "https://github.com/frangelbarrera/DidILeak/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["didileak*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=didileak --cov-report=term-missing --cov-fail-under=90"
